fix: primary color on dark theme adjusted due to contrast issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,7 +63,7 @@
     --popover: 240 10% 3.9%;
     --popover-foreground: 0 0% 98%;
 
-    --primary: 142 71% 45%;
+    --primary: 142 71% 29%;
     --primary-foreground: 0 0% 100%;
 
     --secondary: 240 3.7% 15.9%;
@@ -91,7 +91,7 @@
     --sidebar-background: 240 5.9% 10%;
     --sidebar-foreground: 240 4.8% 95.9%;
 
-    --sidebar-primary: 142 71% 45%;
+    --sidebar-primary: 142 71% 29%;
     --sidebar-primary-foreground: 0 0% 100%;
 
     --sidebar-accent: 142 38% 20%;
